@@ -11,21 +11,16 @@
 
 	<artifactId>application</artifactId>
 
+	<dependencies>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<compilerArgs>
-						<!-- tell the compiler where to find required modules -->
-						<arg>--module-path</arg>
-						<arg>${project.build.directory}/../../api/target/release</arg>
-						<arg>--add-modules</arg>
-						<arg>name.ulbricht.streams.api</arg>
-					</compilerArgs>
-				</configuration>
-			</plugin>
 
 			<!-- perform some additional tasks (Maven does not support this yet) -->
 			<plugin>
@@ -33,7 +28,7 @@
 				<version>1.8</version>
 				<executions>
 
-					<!-- patch the module jar to feature a main class and a version number -->
+					<!-- patch the module jar to feature a main class and/or a version number -->
 					<!-- see https://issues.apache.org/jira/browse/MJAR-238 -->
 					<execution>
 						<id>patch-module-jar</id>
@@ -78,7 +73,7 @@
 							<target>
 								<exec executable="${java.home}/bin/jlink"
 									failonerror="true">
-									
+
 									<!-- paths to modules -->
 									<arg value="-p" />
 									<arg
